--- a/www/css/style.css
+++ b/www/css/style.css
@@ -152,35 +152,53 @@ ul, ol {
 	/* #header */
 	#subheader {
 		position: absolute;
-		height: 30px;
-		padding: 0 20px;
+		height: 28px;
+		padding: 2px 0 0 2px;
 		top: 70px;
 		right: 0;
 		left: 0;
-		background: #CCC;
+		background: #999;
+		border-bottom: 2px solid #666;
 		z-index: 50;
 	}
-		#subheader>span {
-			float: left;
-			font-weight: bold;
-			height: 100%;
-			line-height: 30px;
-		}
 		.submenu {
 			float: left;
-			margin: 0 10px;
-			height: 100%;
+			margin-right: 4px;
 		}
 			.submenu>li {
 				float: left;
-				padding: 0 10px;
-				height: 100%;
-				line-height: 30px;
 				cursor: pointer;
+				position: relative;
+				height: 26px;
+				width: 26px;
+				margin-right: 2px;
 			}
 			.submenu>li:hover {
-				background: #999;
-				color: #333;
+				background: #CCC;
+			}
+			.submenu>li>span {
+				display: none;
+			}
+			#play:before {
+				content: "";
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				border-top: 6px solid transparent;
+				border-bottom: 6px solid transparent;
+				border-left: 10px solid #333;
+				transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				-webkit-transform: translate(-50%, -50%);
+			}
+			#play.selected:before {
+				width: 2px;
+				height: 10px;
+				border-top: none;
+				border-right: 4px solid #333;
+				border-bottom: none;
+				border-left: 4px solid #333;
 			}
 		/* .submenu */
 	/* #subheader */
@@ -193,7 +211,7 @@ ul, ol {
 		background: #666;
 	}
 	#middleSection.editor {
-		top: 100px;
+		top: 102px;
 		bottom: 64px;
 		z-index: 0;
 	}
@@ -405,54 +423,6 @@ ul, ol {
 		border-top: 2px solid #666;
 		overflow: hidden;
 	}
-		#timelineOptions {
-			position: absolute;
-			top: 2px;
-			width: 198px;
-			height: 18px;
-			left: 2px;
-		}
-			#play,
-			#pause {
-				position: relative;
-				float: left;
-				height: 18px;
-				width: 18px;
-				background: #CCC;
-				border-right: 2px solid #999;
-			}
-			#play:hover,
-			#pause:hover {
-				background: #FFF;
-			}
-			#play:before {
-				content: "";
-				display: block;
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				border-top: 6px solid transparent;
-				border-bottom: 6px solid transparent;
-				border-left: 10px solid #666;
-				transform: translate(-50%, -50%);
-				-ms-transform: translate(-50%, -50%);
-				-webkit-transform: translate(-50%, -50%);
-			}
-			#pause:before {
-				content: "";
-				display: block;
-				position: absolute;
-				width: 2px;
-				height: 10px;
-				top: 50%;
-				left: 50%;
-				border-right: 4px solid #666;
-				border-left: 4px solid #666;
-				transform: translate(-50%, -50%);
-				-ms-transform: translate(-50%, -50%);
-				-webkit-transform: translate(-50%, -50%);
-			}
-		/* #timelineOptions */
 		#addLayer {
 			position: absolute;
 			top: 22px;
