--- a/www/css/style.css
+++ b/www/css/style.css
@@ -163,7 +163,11 @@ ul, ol {
 	}
 		.submenu {
 			float: left;
-			margin-right: 4px;
+			border-right: 2px solid #666;
+			margin-right: 2px;
+		}
+		.submenu:last-child {
+			border-right: none;
 		}
 			.submenu>li {
 				float: left;
@@ -172,33 +176,19 @@ ul, ol {
 				height: 26px;
 				width: 26px;
 				margin-right: 2px;
+				background: #FFF;
 			}
+			#play.selected,
+			#pause.selected,
 			.submenu>li:hover {
 				background: #CCC;
 			}
 			.submenu>li>span {
 				display: none;
 			}
-			#play:before {
-				content: "";
-				display: block;
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				border-top: 6px solid transparent;
-				border-bottom: 6px solid transparent;
-				border-left: 10px solid #333;
-				transform: translate(-50%, -50%);
-				-ms-transform: translate(-50%, -50%);
-				-webkit-transform: translate(-50%, -50%);
-			}
-			#play.selected:before {
-				width: 2px;
-				height: 10px;
-				border-top: none;
-				border-right: 4px solid #333;
-				border-bottom: none;
-				border-left: 4px solid #333;
+			.submenu>li>img {
+				width: 26px;
+				height: 26px;
 			}
 		/* .submenu */
 	/* #subheader */
@@ -218,6 +208,7 @@ ul, ol {
 		#toolbar {
 			position: relative;
 			background: #999;
+			border-right: 2px solid #666;
 			float: left;
 			height: 100%;
 			z-index: 50;
@@ -365,13 +356,22 @@ ul, ol {
 							background: #666;
 						}
 			/* #toolOptions */
+			#toolbarOverlay {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: #999;
+				opacity: 0.5;
+			}
 		/* #toolbar */
 		#canvasContainer {
 			position: absolute;
 			top: 0;
 			right: 0;
 			bottom: 0;
-			left: 50px;
+			left: 52px;
 			z-index: 0;
 		}
 			#canvasContainer.cursor {
@@ -831,6 +831,15 @@ ul, ol {
 				background: #666;
 			}
 		/* #timelineVScroll */
+		#timelineOverlay {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: #999;
+			opacity: 0.5;
+		}
 	/* #bottomSection */
 	
 	
@@ -898,7 +907,7 @@ ul, ol {
 			
 /* #mainColumn */
 #sideColumn {
-	background: #999;
+	background: #CCC;
 	position: absolute;
 	width: 248px;
 	top: 0;
@@ -909,7 +918,7 @@ ul, ol {
 	.widget {
 		margin: 0 10px;
 		padding: 10px 0;
-		border-bottom: 2px dotted #333;
+		border-bottom: 2px dotted #666;
 	}
 	.widget h2 {
 		font-weight: bold;
@@ -930,6 +939,7 @@ ul, ol {
 	.widget input {
 		width: 100%;
 		margin-bottom: 8px;
+		border-color: #999;
 	}
 #tooltip {
 	background: #333;
