--- a/www/css/style.css
+++ b/www/css/style.css
@@ -848,7 +848,9 @@ ul, ol {
 	.widget a{
 		color: #333;
 	}
-	.widget h2,
+	.widget h2 {
+		margin-bottom: 8px;
+	}
 	.widget p {
 		margin-bottom: 4px;
 	}
@@ -864,17 +866,30 @@ ul, ol {
 		margin-bottom: 8px;
 		border-color: #999;
 	}
-		.errors {
+	.widget input.secondary {
+		background-color: #999;
+		padding: 0;
+		height: 24px;
+		border: 0;
+	}
+		.errors,
+		.alerts {
 			background: #FFF;
 			margin: 8px 0;
 			padding: 8px 8px 0;
-			color: #f33;
 			font-size: 12px;
 			font-weight: bold;
-			border: 2px solid #F33;
+			border: 2px solid #999;
+		}
+		.errors {
+			border-color: #F33;
+		}
+		.errors li,
+		.alerts li {
+			padding-bottom: 8px;
 		}
 		.errors li {
-			padding-bottom: 8px;
+			color: #f33;
 		}
 		.notification {
 			background: #FFF;
