--- a/www/css/style.css
+++ b/www/css/style.css
@@ -516,7 +516,7 @@ ul, ol {
 			overflow: hidden;
 			top: 42px;
 			right: 42px;
-			bottom: 20px;
+			bottom: 22px;
 			left: 202px;
 		}
 			#indexCells,
@@ -533,6 +533,12 @@ ul, ol {
 			.layerCells {
 				height: 30px;
 			}
+			.layerCells:last-child {
+				height: 28px;
+			}
+				.layerCells:last-child .layerCell {
+					border-bottom-width: 0;
+				}
 				.indexCell,
 				.pointerCell,
 				.layerCell {
@@ -541,6 +547,11 @@ ul, ol {
 					border-color: #999;
 					border-style: solid;
 					border-width: 0 2px 2px 0;
+				}
+				.indexCell:last-child,
+				.pointerCell:last-child,
+				.layerCell:last-child {
+					border-right-width: 0;
 				}
 				.indexCell,
 				.pointerCell {
