--- a/www/css/style.css
+++ b/www/css/style.css
@@ -224,6 +224,7 @@ ul, ol {
 			bottom: 0;
 			left: 0;
 			z-index: 50;
+			width: 50px;
 		}
 			#tools {
 				width: 50px;
@@ -352,7 +353,6 @@ ul, ol {
 			}
 			#splashLogo {
 				position: relative;
-				max-width: 400px;
 				margin: 30px 0;
 				left: 50%;
 				transform: translateX(-50%);
@@ -1103,28 +1103,55 @@ ul, ol {
 		-webkit-transform: translate(-50%, -50%);
 		cursor: auto;
 	}
-		#prompt {
+		#prompt,
+		#settingsDialog {
 			text-align: center;
 		}
 			#prompt>p,
-			#prompt>input {
-				margin: 0 0 8px;
+			#prompt>input,
+			#settingsDialog>p,
+			#settingsDialog>input {
+				margin-bottom: 8px;
 			}
 			#prompt>input {
 				width: 320px;
 			}
-		#settings {
-		}
-		#save {
-		}
-		#load {
-		}
-		#publish {
-		}
+			#settingsDialog>input {
+				width: 200px;
+			}
+			#settingsDialog>span {
+				display: inline-block;
+				width: 120px;
+				text-align: left;
+			}
+		/* #loadDialog */
+			#loadDialog>p,
+			#loadDialog>ol,
+			#loadDialog>div {
+				margin-bottom: 8px;
+			}
+			#loadDialog>p {
+				text-align: center;
+			}
+			#loadList {
+				background: #EEE;
+				padding: 8px 16px;
+				line-height: 20px;
+			}
+				#loadList>li {
+					margin: 8px 0;
+				}
+					#loadList>li>button {
+						margin-right: 8px;
+					}
+			#loadDialog>div {
+				text-align: center;
+			}
+		/* #loadDialog */
 	/* #overlayContainer */
 /* #overlay */
 .vCenter {
-	position: relative;
+	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
