--- a/www/css/style.css
+++ b/www/css/style.css
@@ -203,18 +203,27 @@ ul, ol {
 		position: absolute;
 		right: 0;
 		left: 0;
-		background: #666;
 	}
 	#middleSection.editor {
 		top: 102px;
 		bottom: 64px;
 		z-index: 0;
+		background: #666;
+	}
+	#middleSection.player {
+		top: 102px;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 0;
+		background: #333;
 	}
 	#middleSection.page {
 		border-top: 2px solid #666;
 		top: 70px;
 		bottom: 0;
 		overflow: auto;
+		background: #666;
 	}
 		#toolbar {
 			position: absolute;
@@ -290,7 +299,15 @@ ul, ol {
 				opacity: 0.5;
 			}
 		/* #toolbar */
-		#canvasContainer {
+		#middleSection.player>#canvasContainer {
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			z-index: 0;
+		}
+		#middleSection.editor>#canvasContainer {
 			position: absolute;
 			top: 0;
 			right: 0;
@@ -356,6 +373,7 @@ ul, ol {
 				-moz-box-sizing: border-box;
 				border: 2px solid #CCC;
 				font-weight: bold;
+				font-size: 14px;
 				background: #CCC;
 				color: #333;
 				height: 28px;
@@ -363,6 +381,7 @@ ul, ol {
 				margin: 4px 8px 4px 0;
 				clear: both;
 				vertical-align: middle;
+				line-height: 24px;
 			}
 			.buttonLink:hover {
 				background: #FFF;
